src/components/Navbar/Navbar.css
#navbar {
  padding: 15px 40px;
  position: fixed;
  top: 0;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background-color: #25282c;
  z-index: 1000;
  height: 45px;
  width: calc(100% - 80px);
  margin: 0;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
}
#navbar h1 {
  color: #1db954;
  font-size: 40px;
}
#navbar .profile {
  cursor: pointer;
  padding: 8px 15px;
  border-radius: 4px;
  display: flex;
  justify-content: center;
  align-items: center;
  position: relative;
}
#navbar .profile:hover {
  background-color: #55595f;
}
#navbar button {
  background-color: #1db954;
  border-radius: 20px;
  font-weight: bold;
  width: 125px;
  padding: 10px, 20px;
  cursor: pointer;
  letter-spacing: 0.1em;
  color: black;
}
#navbar .navbar-rhs {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}
#navbar .profile-pic {
  width: 40px;
  height: 40px;
  border-radius: 50%;
  margin-right: 5px;
}
#navbar .dd-arrow {
  width: 10px;
}
#navbar button:active {
  filter: brightness(0.75);
}
#navbar a:hover {
  color: #1db954;
}
#navbar .logo {
  width: 50px;
}
.profile-dropdown {
  position: absolute;
  display: inline-block;
  top: 0;
  right: -30px;
  background-color: white;
  width: 175px;
  border-radius: 10px;
  overflow: hidden;
  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
  z-index: 1001;
}
.profile-dropdown .dropdown-top {
  border-bottom: 1px solid #d9e3ea;
  padding: 10px 0;
}
.profile-dropdown img {
  width: 60px;
  height: 60px;
  border-radius: 50%;
}
.profile-dropdown h3 {
  font-size: 15px;
  padding: 5px 0;
}
.profile-dropdown h4 {
  font-size: 15px;
  padding-top: 10px;
  padding-bottom: 10px;
  color: #55595f;
}
.profile-dropdown .logout h4 {
  color: #db4437;
  border-top: 1px solid #d9e3ea;
}
.profile-dropdown h4:hover {
  background-color: #d9e3ea;
  cursor: pointer;
}

/* hamburger */
#navbar .hamburger {
  height: 45px;
  width: 45px;
  display: inline-block;
  border: 2px solid #d9e3ea;
  border-radius: 50%;
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 100;
  cursor: pointer;
  transform: scale(0.8);
  margin-right: 20px;
}
#navbar .hamburger::after {
  position: absolute;
  content: "";
  height: 100%;
  width: 100%;
  border-radius: 50%;
  border: 2px solid #d9e3ea;
  animation: hamburger_pulse 1.5s ease infinite;
}
#navbar .hamburger .bar {
  height: 2px;
  width: 30px;
  position: relative;
  background-color: white;
  z-index: -1;
}
#navbar .hamburger .bar::after,
#navbar .hamburger .bar::before {
  content: "";
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  background-color: #d9e3ea;
  transition: 0.3s ease;
  transition-property: top, bottom;
}
#navbar .hamburger .bar::after {
  top: 8px;
}
#navbar .hamburger .bar::before {
  bottom: 8px;
}
#navbar .hamburger.active .bar::before {
  bottom: 0;
}
#navbar .hamburger.active .bar::after {
  top: 0;
}

@keyframes hamburger_pulse {
  0% {
    opacity: 1;
    transform: scale(1);
  }
  100% {
    opacity: 0;
    transform: scale(1.4);
  }
}
/* end hamburger */

@media only screen and (min-width: 960px) {
  #navbar .sidebar-toggle {
    display: none;
  }
}

